--- a/_posts/2018-01-13-blog.md
+++ b/_posts/2018-01-13-blog.md
@@ -6,8 +6,7 @@ date:   2018-1-14 13:18:00
 对于很多刚学前端的朋友们来说（比如我），在学习的过程中经常会记一些笔记，除了现实中的烂笔头，我们也可以在PC上记笔记、写总结，下面分享一些或多或少会用上的网站或工具。
 
 >脑图类：[Xmind](https://www.xmind.cn/)、[百度脑图](http://naotu.baidu.com/)...
-
->总结类：[CSDN](https://www.csdn.net/)、[简书](https://www.jianshu.com/)、[segmentfault](https://segmentfault.com/)、[博客园](https://www.cnblogs.com/)...
+总结类：[CSDN](https://www.csdn.net/)、[简书](https://www.jianshu.com/)、[segmentfault](https://segmentfault.com/)、[博客园](https://www.cnblogs.com/)...
 
 
 
@@ -29,8 +28,8 @@ date:   2018-1-14 13:18:00
 
 
 
-#<font color=##0F88EE ># 域名<font color=#333>
->首先我们要先理解域名的作用，我们浏览器之所以能搜索不同的网站，都是通过域名来让别人访问的，一个简单通俗的例子：我网购了一件商品，快递员需要知道我家的地址才能给我送快来，而这个地址就是我们的域名。
+#域名
+首先我们要先理解域名的作用，我们浏览器之所以能搜索不同的网站，都是通过域名来让别人访问的，一个简单通俗的例子：我网购了一件商品，快递员需要知道我家的地址才能给我送快来，而这个地址就是我们的域名。
 
 
 > 注册域名也很简单，这里以[腾讯云](https://cloud.tencent.com/)为例，通过菜单找到域名注册
@@ -71,7 +70,7 @@ date:   2018-1-14 13:18:00
 
 
 
-#<font color=##0F88EE ># GitHub<font color=#333>
+#GitHub
 
 
 学前端的怎能不会使用git呢，GitHub作为全球最大的代码托管（同性交流）平台，大牛发声，无数码农尽折腰
@@ -81,9 +80,7 @@ date:   2018-1-14 13:18:00
 ![](http://7tszky.com1.z0.glb.clouddn.com/FnoCUFj0MDMw9MQD3XEQeSq1EFd7)
 
 >GitHub官网：[点我](https://github.com/)
-
->GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/20070065)
-
+GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/20070065)
 
 
 
@@ -94,7 +91,7 @@ date:   2018-1-14 13:18:00
 
 
 
-#<font color=##0F88EE ># jekyll与实现<font color=#333>
+#jekyll与实现
 
 如果你看到这，你还没有GitHub，我表示对你的耐心程度真的很失望，想空手搭博客是不可能的，建议去申请一个GitHub吧，因为jekyll是基于GitHub实现的。
 
@@ -104,21 +101,9 @@ date:   2018-1-14 13:18:00
 
 
 >首先，我们先找一块自己喜欢的jekyll模板，这里介绍两个不错的网站：[jekyllthemes](http://jekyllthemes.org/)、[jekyll-themes](https://jekyll-themes.com/)，如果里面的模板并不满意，请自行谷歌百度jekyll模板...
-
-
-
->这里我找了个不错的模板，下面教程将以此模板为例
-
-
->模板样式：[点击查看](https://andrewbanchich.github.io/editorial-jekyll-theme/)
-
-
->GitHub项目地址：[点击查看](https://github.com/andrewbanchich/editorial-jekyll-theme)
-
-
-
-
-
+这里我找了个不错的模板，下面教程将以此模板为例
+模板样式：[点击查看](https://andrewbanchich.github.io/editorial-jekyll-theme/)
+GitHub项目地址：[点击查看](https://github.com/andrewbanchich/editorial-jekyll-theme)
 
 
 >第一步，fork项目，红箭头点击拷贝一份项目，红框更变为自己的用户名即为成功；注：如果你不想别人看到你的博客是拷贝别人，可点击黑箭头处，如果你是新人，不建议这么做
@@ -129,7 +114,6 @@ date:   2018-1-14 13:18:00
 
 
 >首选需要对我们frok的项目配置一下，点击设置Settings，并修改Repository name，意思为仓库名称，我们这里改为如下格式  XXX.github.io，其中XXX是你自己起的，但是.github.io一定要写上，最后点击Rename保存即可
-
 说明一下：github给我们提供了一个免费的服务器，我们需要通过写上.github.io来开启，不然还要掏钱买呢
 
 
@@ -202,22 +186,13 @@ date:   2018-1-14 13:18:00
 
 
 >到这里，我们需要回到Github，把我们的项目clone下来，如果不懂，请回去学习下我们的秘籍，这里也顺便提供一个github的客户端，不想敲git命令的有福气了，当然我也相信能走到这里的朋友，git都多少掌握一点了
+GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/20070065)
+客户端：[链接](https://desktop.github.com/)
 
->GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/20070065)
-
->客户端：[链接](https://desktop.github.com/)
-
-
+当我们把项目给clone下来之后，就要进入到我们的HTML与CSS了
 
 
-
->当我们把项目给clone下来之后，就要进入到我们的HTML与CSS了
-
-
-
-
-
-#<font color=##0F88EE ># HTML & CSS<font color=#333>
+#HTML & CSS
 
 下面的才是我们要动手术到的地方，请确保脑瓜中的HTML & CSS知识是否足够，如果你对你的百度很自信，那么接着走
 
@@ -233,18 +208,12 @@ date:   2018-1-14 13:18:00
 ```
 http://case.yiqunerbi.com/editorial-jekyll-theme/assets/cssmain.css
 ```
-
->其路径解读：http://我的域名/editorial-jekyll-theme/assets/cssmain.css 
-
-
-
->这里需要说明下github实现页面的原理，当我们开启github pages的时候，我们域名所访问的是对应其自己github下，博客仓库内根目录的index.html
-
->既然我们能访问得到index.html，也就说明index的路径是正确的，我们可以用编辑器打开看看项目文件夹，然后与报错的路径做个对比
+其路径解读：http://我的域名/editorial-jekyll-theme/assets/cssmain.css 
+这里需要说明下github实现页面的原理，当我们开启github pages的时候，我们域名所访问的是对应其自己github下，博客仓库内根目录的index.html
+既然我们能访问得到index.html，也就说明index的路径是正确的，我们可以用编辑器打开看看项目文件夹，然后与报错的路径做个对比
 
 
 ![](http://7tszky.com1.z0.glb.clouddn.com/Fsb_KIiXBxZnq08sRtxk5lzQxi6k)
-
 
 
 >细心的朋友一下就发起了其中的端倪，浏览器在访问的样式链接根本就不存在
