--- a/_posts/2018-01-13-blog.md
+++ b/_posts/2018-01-13-blog.md
@@ -6,6 +6,7 @@ date:   2018-1-14 13:18:00
 对于很多刚学前端的朋友们来说（比如我），在学习的过程中经常会记一些笔记，除了现实中的烂笔头，我们也可以在PC上记笔记、写总结，下面分享一些或多或少会用上的网站或工具。
 
 >脑图类：[Xmind](https://www.xmind.cn/)、[百度脑图](http://naotu.baidu.com/)...
+
 总结类：[CSDN](https://www.csdn.net/)、[简书](https://www.jianshu.com/)、[segmentfault](https://segmentfault.com/)、[博客园](https://www.cnblogs.com/)...
 
 
@@ -28,7 +29,7 @@ date:   2018-1-14 13:18:00
 
 
 
-#域名
+# 域名
 首先我们要先理解域名的作用，我们浏览器之所以能搜索不同的网站，都是通过域名来让别人访问的，一个简单通俗的例子：我网购了一件商品，快递员需要知道我家的地址才能给我送快来，而这个地址就是我们的域名。
 
 
@@ -70,7 +71,7 @@ date:   2018-1-14 13:18:00
 
 
 
-#GitHub
+# GitHub
 
 
 学前端的怎能不会使用git呢，GitHub作为全球最大的代码托管（同性交流）平台，大牛发声，无数码农尽折腰
@@ -80,6 +81,7 @@ date:   2018-1-14 13:18:00
 ![](http://7tszky.com1.z0.glb.clouddn.com/FnoCUFj0MDMw9MQD3XEQeSq1EFd7)
 
 >GitHub官网：[点我](https://github.com/)
+
 GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/20070065)
 
 
@@ -91,7 +93,7 @@ GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/2007006
 
 
 
-#jekyll与实现
+# jekyll与实现
 
 如果你看到这，你还没有GitHub，我表示对你的耐心程度真的很失望，想空手搭博客是不可能的，建议去申请一个GitHub吧，因为jekyll是基于GitHub实现的。
 
@@ -192,7 +194,7 @@ GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/2007006
 当我们把项目给clone下来之后，就要进入到我们的HTML与CSS了
 
 
-#HTML & CSS
+# HTML & CSS
 
 下面的才是我们要动手术到的地方，请确保脑瓜中的HTML & CSS知识是否足够，如果你对你的百度很自信，那么接着走
 
@@ -208,8 +210,12 @@ GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/2007006
 ```
 http://case.yiqunerbi.com/editorial-jekyll-theme/assets/cssmain.css
 ```
-其路径解读：http://我的域名/editorial-jekyll-theme/assets/cssmain.css 
-这里需要说明下github实现页面的原理，当我们开启github pages的时候，我们域名所访问的是对应其自己github下，博客仓库内根目录的index.html
+其路径解读：http://我的域名/editorial-jekyll-theme/assets/cssmain.css
+
+这里需要说明下github实现页面的原理，当我们开启github
+
+pages的时候，我们域名所访问的是对应其自己github下，博客仓库内根目录的index.html
+
 既然我们能访问得到index.html，也就说明index的路径是正确的，我们可以用编辑器打开看看项目文件夹，然后与报错的路径做个对比
 
 
