--- a/_posts/2018-01-13-blog.md
+++ b/_posts/2018-01-13-blog.md
@@ -6,8 +6,7 @@ date:   2018-1-14 13:18:00
 对于很多刚学前端的朋友们来说（比如我），在学习的过程中经常会记一些笔记，除了现实中的烂笔头，我们也可以在PC上记笔记、写总结，下面分享一些或多或少会用上的网站或工具。
 
 >脑图类：[Xmind](https://www.xmind.cn/)、[百度脑图](http://naotu.baidu.com/)...
-
-总结类：[CSDN](https://www.csdn.net/)、[简书](https://www.jianshu.com/)、[segmentfault](https://segmentfault.com/)、[博客园](https://www.cnblogs.com/)...
+>总结类：[CSDN](https://www.csdn.net/)、[简书](https://www.jianshu.com/)、[segmentfault](https://segmentfault.com/)、[博客园](https://www.cnblogs.com/)...
 
 
 
@@ -81,8 +80,7 @@ date:   2018-1-14 13:18:00
 ![](http://7tszky.com1.z0.glb.clouddn.com/FnoCUFj0MDMw9MQD3XEQeSq1EFd7)
 
 >GitHub官网：[点我](https://github.com/)
-
-GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/20070065)
+>GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/20070065)
 
 
 
@@ -116,7 +114,7 @@ GitHub项目地址：[点击查看](https://github.com/andrewbanchich/editorial-
 
 
 >首选需要对我们frok的项目配置一下，点击设置Settings，并修改Repository name，意思为仓库名称，我们这里改为如下格式  XXX.github.io，其中XXX是你自己起的，但是.github.io一定要写上，最后点击Rename保存即可
-说明一下：github给我们提供了一个免费的服务器，我们需要通过写上.github.io来开启，不然还要掏钱买呢
+>说明一下：github给我们提供了一个免费的服务器，我们需要通过写上.github.io来开启，不然还要掏钱买呢
 
 
 ![](http://7tszky.com1.z0.glb.clouddn.com/FnjjbM-uN0icSbT3_nBcXQPd-MfC)
@@ -210,13 +208,10 @@ GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/2007006
 ```
 http://case.yiqunerbi.com/editorial-jekyll-theme/assets/cssmain.css
 ```
-其路径解读：http://我的域名/editorial-jekyll-theme/assets/cssmain.css
-
-这里需要说明下github实现页面的原理，当我们开启github
-
-pages的时候，我们域名所访问的是对应其自己github下，博客仓库内根目录的index.html
-
-既然我们能访问得到index.html，也就说明index的路径是正确的，我们可以用编辑器打开看看项目文件夹，然后与报错的路径做个对比
+>其路径解读：http://我的域名/editorial-jekyll-theme/assets/cssmain.css
+>这里需要说明下github实现页面的原理，当我们开启github
+>pages的时候，我们域名所访问的是对应其自己github下，博客仓库内根目录的index.html
+>既然我们能访问得到index.html，也就说明index的路径是正确的，我们可以用编辑器打开看看项目文件夹，然后与报错的路径做个对比
 
 
 ![](http://7tszky.com1.z0.glb.clouddn.com/Fsb_KIiXBxZnq08sRtxk5lzQxi6k)
