--- a/_posts/2018-01-13-blog.md
+++ b/_posts/2018-01-13-blog.md
@@ -6,6 +6,7 @@ date:   2018-1-14 13:18:00
 对于很多刚学前端的朋友们来说（比如我），在学习的过程中经常会记一些笔记，除了现实中的烂笔头，我们也可以在PC上记笔记、写总结，下面分享一些或多或少会用上的网站或工具。
 
 >脑图类：[Xmind](https://www.xmind.cn/)、[百度脑图](http://naotu.baidu.com/)...
+
 >总结类：[CSDN](https://www.csdn.net/)、[简书](https://www.jianshu.com/)、[segmentfault](https://segmentfault.com/)、[博客园](https://www.cnblogs.com/)...
 
 
@@ -80,6 +81,7 @@ date:   2018-1-14 13:18:00
 ![](http://7tszky.com1.z0.glb.clouddn.com/FnoCUFj0MDMw9MQD3XEQeSq1EFd7)
 
 >GitHub官网：[点我](https://github.com/)
+
 >GitHub秘籍：[如何与直男打交道](https://www.zhihu.com/question/20070065)
 
 
@@ -101,9 +103,12 @@ date:   2018-1-14 13:18:00
 
 
 >首先，我们先找一块自己喜欢的jekyll模板，这里介绍两个不错的网站：[jekyllthemes](http://jekyllthemes.org/)、[jekyll-themes](https://jekyll-themes.com/)，如果里面的模板并不满意，请自行谷歌百度jekyll模板...
-这里我找了个不错的模板，下面教程将以此模板为例
-模板样式：[点击查看](https://andrewbanchich.github.io/editorial-jekyll-theme/)
-GitHub项目地址：[点击查看](https://github.com/andrewbanchich/editorial-jekyll-theme)
+
+>这里我找了个不错的模板，下面教程将以此模板为例
+
+>模板样式：[点击查看](https://andrewbanchich.github.io/editorial-jekyll-theme/)
+
+>GitHub项目地址：[点击查看](https://github.com/andrewbanchich/editorial-jekyll-theme)
 
 
 >第一步，fork项目，红箭头点击拷贝一份项目，红框更变为自己的用户名即为成功；注：如果你不想别人看到你的博客是拷贝别人，可点击黑箭头处，如果你是新人，不建议这么做
